--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@craco/craco": "^6.3.0",
+    "babel-plugin-import": "^1.13.3",
+    "craco-less": "^1.20.0"
   }
 }
